html body fixed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Segundo commit</p>
-    <p>Feature-1 agregada</p>
+    <h1>Ahora ta todo mas lindo</h1>
+    <p style="background-color: red;">Le metemos color</p>
 </body>
 <script src="app.js"></script>
 </html>
