html body fixed with paragraphs

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Segundo commit</p>
-    <p>Feature-1 agregada</p>
+    <p>Lo hacemos con parrafos mejor el titulo</p>
+    <p style="background-color:blue">Aca tmb</p>
 </body>
 <script src="app.js"></script>
 </html>
