paragraph for feature-3

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Ahora ta todo mas lindo</h1>
+    <p>Parrafo para la feature-3</p>
     <p style="background-color: red;">Le metemos color</p>
 </body>
 <script src="app.js"></script>
