added thing to fix the bug

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Ahora ta todo mas lindo</h1>
     <p>Parrafo para la feature-3</p>
     <p style="background-color: red;">Le metemos color</p>
+    
+    <p>Esto de aca esta bugueadoooo</p>
 </body>
 <script src="app.js"></script>
 </html>
