--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p style="background-color: red;">Le metemos color</p>
     
     <p>Esto de aca esta bugueadoooo</p>
+    <p>Nasheeeeeeeeeeeeeeeee</p>
+    <p>Ultima linea</p>
 </body>
 <script src="app.js"></script>
 </html>
